Bug 438824 - [Wayland] Cursor is invisible after the screen leaves energy saving mode
Summary: [Wayland] Cursor is invisible after the screen leaves energy saving mode
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.22.1
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 442824 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-06-17 19:52 UTC by Patrick Silva
Modified: 2021-09-23 14:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-06-17 19:52:33 UTC
SUMMARY
I can reproduce this bug on Wayland session of Arch Linux (Plasma 5.22.1)
and neon unstable.

STEPS TO REPRODUCE
1. set Screen "Energy Saving > Switch off after" to 1 minute
in Energy Saving KCM
2. minimize all windows
3. position the cursor over your wallpaper
4. wait for 1 minute until your screen switches off
5. re-activate your screen by pressing ctrl key

OBSERVED RESULT
Cursor is invisible.
"Ghost" cursor becomes visible when I hover over Plasma panel.

EXPECTED RESULT
visible cursor when display leaves power saving mode

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2021-06-18 13:11:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1114
Comment 2 Zamundaaa 2021-06-18 14:10:42 UTC
Git commit b33fef02f57bc359e6099db1a9983c4a9fa14fa7 by Xaver Hugl.
Committed on 18/06/2021 at 14:10.
Pushed by zamundaaa into branch 'master'.

platforms/drm: show cursor when exiting dpms

M  +1    -0    src/plugins/platforms/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/commit/b33fef02f57bc359e6099db1a9983c4a9fa14fa7
Comment 3 Zamundaaa 2021-06-18 14:11:08 UTC
Git commit 9a210ec018ebe32090595e7c28b088b55e11259d by Xaver Hugl.
Committed on 18/06/2021 at 14:11.
Pushed by zamundaaa into branch 'Plasma/5.22'.

platforms/drm: show cursor when exiting dpms


(cherry picked from commit b33fef02f57bc359e6099db1a9983c4a9fa14fa7)

M  +1    -0    src/plugins/platforms/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/commit/9a210ec018ebe32090595e7c28b088b55e11259d
Comment 4 Patrick Silva 2021-07-25 15:02:47 UTC
I can reproduce this bug again on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 5 Patrick Silva 2021-09-16 13:14:56 UTC
Also reproducible on Arch Linux after update to Plasma 5.23 beta.

Operating System: Arch Linux
KDE Plasma Version: 5.22.90
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 6 Bharadwaj Raju 2021-09-23 13:19:05 UTC
*** Bug 442824 has been marked as a duplicate of this bug. ***
Comment 7 Zamundaaa 2021-09-23 13:56:40 UTC
Git commit 416f55cea3edc3e24eb70296f551d790ce6dac67 by Xaver Hugl.
Committed on 23/09/2021 at 13:54.
Pushed by zamundaaa into branch 'master'.

platforms/drm: fix hidden cursor

M  +4    -1    src/plugins/platforms/drm/drm_pipeline.cpp

https://invent.kde.org/plasma/kwin/commit/416f55cea3edc3e24eb70296f551d790ce6dac67
Comment 8 Zamundaaa 2021-09-23 13:57:07 UTC
Git commit 9e4f911580d1935c767619902a8156a6af3fb255 by Xaver Hugl.
Committed on 23/09/2021 at 13:57.
Pushed by zamundaaa into branch 'Plasma/5.23'.

platforms/drm: fix hidden cursor


(cherry picked from commit 416f55cea3edc3e24eb70296f551d790ce6dac67)

M  +4    -1    src/plugins/platforms/drm/drm_pipeline.cpp

https://invent.kde.org/plasma/kwin/commit/9e4f911580d1935c767619902a8156a6af3fb255