platforms/drm: show cursor when exiting dpms

BUG: 438824